{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 36,
  "lineage": "fb6313d7-e760-df83-3fde-6a94ccc56d2a",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-08-30T05:43:16.131-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fast-banner-433813-r7/global/firewalls/allow-external-vpc-cluster-java",
            "log_config": [],
            "name": "allow-external-vpc-cluster-java",
            "network": "https://www.googleapis.com/compute/v1/projects/fast-banner-433813-r7/global/networks/vpc-cluster-java",
            "priority": 1000,
            "project": "fast-banner-433813-r7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fast-banner-433813-r7/global/firewalls/allow-external-vpc-cluster-java",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_networks"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-08-30T05:43:10.907-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fast-banner-433813-r7/global/firewalls/allow-external-vpc-cluster-python",
            "log_config": [],
            "name": "allow-external-vpc-cluster-python",
            "network": "https://www.googleapis.com/compute/v1/projects/fast-banner-433813-r7/global/networks/vpc-cluster-python",
            "priority": 1000,
            "project": "fast-banner-433813-r7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fast-banner-433813-r7/global/firewalls/allow-external-vpc-cluster-python",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_networks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2024-08-30T05:43:16.069-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fast-banner-433813-r7/global/firewalls/allow-internal-vpc-cluster-java",
            "log_config": [],
            "name": "allow-internal-vpc-cluster-java",
            "network": "https://www.googleapis.com/compute/v1/projects/fast-banner-433813-r7/global/networks/vpc-cluster-java",
            "priority": 1000,
            "project": "fast-banner-433813-r7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fast-banner-433813-r7/global/firewalls/allow-internal-vpc-cluster-java",
            "source_ranges": [
              "10.0.0.0/8"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "internal"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_networks"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2024-08-30T05:43:13.171-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fast-banner-433813-r7/global/firewalls/allow-internal-vpc-cluster-python",
            "log_config": [],
            "name": "allow-internal-vpc-cluster-python",
            "network": "https://www.googleapis.com/compute/v1/projects/fast-banner-433813-r7/global/networks/vpc-cluster-python",
            "priority": 1000,
            "project": "fast-banner-433813-r7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fast-banner-433813-r7/global/firewalls/allow-internal-vpc-cluster-python",
            "source_ranges": [
              "10.0.0.0/8"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "internal"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_networks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-08-30T05:43:10.929-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fast-banner-433813-r7/global/firewalls/allow-ssh-vpc-cluster-java",
            "log_config": [],
            "name": "allow-ssh-vpc-cluster-java",
            "network": "https://www.googleapis.com/compute/v1/projects/fast-banner-433813-r7/global/networks/vpc-cluster-java",
            "priority": 1000,
            "project": "fast-banner-433813-r7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fast-banner-433813-r7/global/firewalls/allow-ssh-vpc-cluster-java",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_networks"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-08-30T05:43:22.764-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fast-banner-433813-r7/global/firewalls/allow-ssh-vpc-cluster-python",
            "log_config": [],
            "name": "allow-ssh-vpc-cluster-python",
            "network": "https://www.googleapis.com/compute/v1/projects/fast-banner-433813-r7/global/networks/vpc-cluster-python",
            "priority": 1000,
            "project": "fast-banner-433813-r7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fast-banner-433813-r7/global/firewalls/allow-ssh-vpc-cluster-python",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_networks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "deny_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2024-08-30T05:43:10.916-07:00",
            "deny": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fast-banner-433813-r7/global/firewalls/deny-all-vpc-cluster-java",
            "log_config": [],
            "name": "deny-all-vpc-cluster-java",
            "network": "https://www.googleapis.com/compute/v1/projects/fast-banner-433813-r7/global/networks/vpc-cluster-java",
            "priority": 1000,
            "project": "fast-banner-433813-r7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fast-banner-433813-r7/global/firewalls/deny-all-vpc-cluster-java",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_networks"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2024-08-30T05:43:10.935-07:00",
            "deny": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fast-banner-433813-r7/global/firewalls/deny-all-vpc-cluster-python",
            "log_config": [],
            "name": "deny-all-vpc-cluster-python",
            "network": "https://www.googleapis.com/compute/v1/projects/fast-banner-433813-r7/global/networks/vpc-cluster-python",
            "priority": 1000,
            "project": "fast-banner-433813-r7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fast-banner-433813-r7/global/firewalls/deny-all-vpc-cluster-python",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_networks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_networks",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/fast-banner-433813-r7/global/networks/vpc-cluster-java",
            "mtu": 0,
            "name": "vpc-cluster-java",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "1304180085384544445",
            "project": "fast-banner-433813-r7",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fast-banner-433813-r7/global/networks/vpc-cluster-java"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/fast-banner-433813-r7/global/networks/vpc-cluster-python",
            "mtu": 0,
            "name": "vpc-cluster-python",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "3359523074133983421",
            "project": "fast-banner-433813-r7",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fast-banner-433813-r7/global/networks/vpc-cluster-python"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-08-30T05:43:11.851-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/fast-banner-433813-r7/regions/us-central1/routers/nat-router-vpc-cluster-java",
            "name": "nat-router-vpc-cluster-java",
            "network": "https://www.googleapis.com/compute/v1/projects/fast-banner-433813-r7/global/networks/vpc-cluster-java",
            "project": "fast-banner-433813-r7",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fast-banner-433813-r7/regions/us-central1/routers/nat-router-vpc-cluster-java"
          },
          "dependencies": [
            "google_compute_network.vpc_networks"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-08-30T05:43:12.884-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/fast-banner-433813-r7/regions/us-central1/routers/nat-router-vpc-cluster-python",
            "name": "nat-router-vpc-cluster-python",
            "network": "https://www.googleapis.com/compute/v1/projects/fast-banner-433813-r7/global/networks/vpc-cluster-python",
            "project": "fast-banner-433813-r7",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fast-banner-433813-r7/regions/us-central1/routers/nat-router-vpc-cluster-python"
          },
          "dependencies": [
            "google_compute_network.vpc_networks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat_config",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "fast-banner-433813-r7/us-central1/nat-router-vpc-cluster-java/nat-config-vpc-cluster-java",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "nat-config-vpc-cluster-java",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "fast-banner-433813-r7",
            "region": "us-central1",
            "router": "nat-router-vpc-cluster-java",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.vpc_networks",
            "google_compute_router.nat_router"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "fast-banner-433813-r7/us-central1/nat-router-vpc-cluster-python/nat-config-vpc-cluster-python",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "nat-config-vpc-cluster-python",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "fast-banner-433813-r7",
            "region": "us-central1",
            "router": "nat-router-vpc-cluster-python",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.vpc_networks",
            "google_compute_router.nat_router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-08-30T05:43:12.883-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/fast-banner-433813-r7/regions/us-central1/subnetworks/subnet-cluster-java",
            "ip_cidr_range": "10.0.0.0/16",
            "name": "subnet-cluster-java",
            "network": "https://www.googleapis.com/compute/v1/projects/fast-banner-433813-r7/global/networks/vpc-cluster-java",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "fast-banner-433813-r7",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fast-banner-433813-r7/regions/us-central1/subnetworks/subnet-cluster-java",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_networks"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-08-30T05:43:12.913-07:00",
            "gateway_address": "10.1.0.1",
            "id": "projects/fast-banner-433813-r7/regions/us-central1/subnetworks/subnet-cluster-python",
            "ip_cidr_range": "10.1.0.0/16",
            "name": "subnet-cluster-python",
            "network": "https://www.googleapis.com/compute/v1/projects/fast-banner-433813-r7/global/networks/vpc-cluster-python",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "fast-banner-433813-r7",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fast-banner-433813-r7/regions/us-central1/subnetworks/subnet-cluster-python",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_networks"
          ]
        }
      ]
    }
  ]
}